objects/DCCA_DO_Mail_List__c.object
<CustomObject>
    <label>DCCA DO Mail List</label>
    <nameField>
        <label>DCCA DO Mail List Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DCCA DO Mail Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>DCCA_Leg_DO__c</fullName>
        <label>DCCA Leg-DO</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DCCA_Leg_ASO__c</fullName>
        <label>DCCA Leg-ASO</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DCCA_Leg_All__c</fullName>
        <label>DCCA Leg All</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DCCA_Leg_DCA__c</fullName>
        <label>DCCA Leg-DCA</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DCCA_Leg_DFI__c</fullName>
        <label>DCCA Leg-DFI</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DCCA_Leg_INS__c</fullName>
        <label>DCCA Leg-INS</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DCCA_Leg_OAH__c</fullName>
        <label>DCCA Leg-OAH</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DCCA_Leg_OCP__c</fullName>
        <label>DCCA Leg-OCP</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DCCA_Leg_PVL__c</fullName>
        <label>DCCA Leg-PVL</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DCCA_Leg_BREG__c</fullName>
        <label>DCCA Leg-BREG</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DCCA_Leg_CATV__c</fullName>
        <label>DCCA Leg-CATV</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DCCA_Leg_ISCO__c</fullName>
        <label>DCCA Leg-ISCO</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DCCA_Leg_RICO__c</fullName>
        <label>DCCA Leg-RICO</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DCCA_Leg_HPEAP__c</fullName>
        <label>DCCA Leg-HPEAP</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DCCA_DIV_CC_Addr__c</fullName>
        <label>DCCA DIV CC Addr</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DCCA_Division_ML__c</fullName>
        <description>DCCA Division, will relate to the Division and Division 2 fields in DCCA DO Referral</description>
        <label>DCCA Division ML</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DCCA_DIV_CC_Addr2__c</fullName>
        <description>Second cc address for the Division</description>
        <label>DCCA DIV CC Addr2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DCCA_DIV_CC_Addr3__c</fullName>
        <description>third cc address for Division</description>
        <label>DCCA DIV CC Addr3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DCCA_DIV_Primary_Addr__c</fullName>
        <label>DCCA DIV Primary Addr</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DCCA_Leg_Coordinators__c</fullName>
        <label>DCCA Leg-Coordinators</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DCCA_DIV_Primary_Addr2__c</fullName>
        <description>second primary addr for Division</description>
        <label>DCCA DIV Primary Addr2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DCCA_DIV_Primary_Addr3__c</fullName>
        <description>third primary addr for Division</description>
        <label>DCCA DIV Primary Addr3</label>
        <type>Email</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>